--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <body>
         <h1>Discover hidden places in the world around you</h1>
         <p>Download Excursion (Coming soon!)<a href=""></a></p>
-        <p><img src="" alt=""></p>
+        <p><img src="C:\Users\Sthembiso Skhosana\Documents\excursion\resources\videos\excursion.mp4" alt="Montage clips of the great outdoors"></p>
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <img src="" alt="">
+        <img src=""C:\Users\Sthembiso Skhosana\Documents\excursion\resources\images\camp.jpg"" alt="Camping in the great outdoors">
+        <img src=""C:\Users\Sthembiso Skhosana\Documents\excursion\resources\images\phone.png"" alt="Cellphone icon">
         <h2>Coming Soon for iPhone and Android</h2>
         <p>Download Excursion (Coming soon!)<a href=""></a></p>
     </body>
